# live-source-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER_RUN.md  Dockerfile  Dockerfile.bak.20260615091136  IDENTITY.md  MEMORY.md  README.md  REPORT.md  REPORT_WEB_R1_FIX.md  SOUL.md  TOOLS.md  build.sh  code_quality_report.md  config_migration_plan.md  config_migration_v2.md  cookies.txt  docker-compose.yml  dockrun.sh  healthcheck.sh  key_display_plan.md  nginx.conf  overview.md  plan_refactor_r3.md  plan_test_r3.md  pyproject.toml  pytest.ini  requirements.txt  setup_linux.sh  setup_windows.bat  setup_windows.ps1  start.sh  start.sh.bak  start_docker.sh  test_report_r3.md  test_report_r3_iter2.md  tv.txt
.github/workflows/: docker-build-push.yml  docker.yml
.openclaw/: workspace-state.json
app/: __init__.py  __main__.py  channel_rules.py  config.py  config_manager.py  error_handler.py  exceptions.py  file_utils.py  logger.py  m3u_generator.py  main.py  manager.py  models.py  network_test.py  rules.py  scripts.py  security.py  source_manager.py  stream_tester.py  test_http.py  url_sanitizer.py  utils.py
app/data/: seed_classification_rules.sql
config/: channel_rules.yml  config-defaults.yaml  config.ini  config.ini.bak  nginx.conf
config/online/: .github_entry_map.json  CCTV.m3u  CNTV.m3u  CUTV.txt  GNTV.m3u  Gather.m3u  Global.m3u  Hunan.txt  Migu.m3u  Radio.m3u  epg.txt  extra.txt  feiyang.m3u  feiyang2.m3u  hosts.txt  index.m3u  iptv.m3u  iptv4.m3u  ipv4.m3u  ipv4_0214.m3u  ipv4_0221.m3u  ipv4_0226.m3u  ipv4_0228.m3u  ipv4_0315.m3u  ipv4_0429.m3u  ipv4_0512.m3u  ipv4_0520.m3u  ipv4_0526.m3u  ipv4_0807.m3u  ipv4_20260327.m3u  ipv4全网通.m3u  ipv6.m3u  ipv6.txt  ipv6_0210.m3u  ipv6_0211.m3u  ipv6_0212.m3u  ipv6_20241231.m3u  ipv6_20250103.m3u  ipv6_20250114.m3u  ipv6_20250117.m3u  (+14 more)
data/: c3.txt  c4.txt  c5.txt  c6.txt  cookies.txt  cookies_new.txt
data/status/: latest_test.json
deploy/: live-source-web.service
deploy/windows/: install-autostart.ps1  start-web.bat
memory/: 2026-06-14.md  2026-06-15.md
online/: result.m3u  zho.m3u
tests/: conftest.py  test_channel_rules.py  test_config.py  test_config_manager.py  test_config_reload.py  test_config_sqlite.py  test_config_sqlite_r2.py  test_core.py  test_crypto.py  test_dedup_sources.py  test_encrypt_config.py  test_encrypt_key.py  test_error_handler.py  test_exceptions.py  test_file_utils.py  test_first_init.py  test_gitignore.py  test_integration_config.py  test_m3u_generator.py  test_main.py  test_main_integration.py  test_models.py  test_network_test.py  test_output_optimizer.py  test_periodic.py  test_security.py  test_source_manager.py  test_startup.py  test_stream_optimizer.py  test_stream_tester.py  test_test_http.py  test_url_sanitizer.py  test_utils.py  test_web_api.py  test_web_auth.py  test_websocket.py
web/: __init__.py  __main__.py  auth.py  config_proxy.py  core.py  crypto_utils.py  models.py  webapi.py.bak  webapp.py  ws_manager.py
web/routes/: __init__.py  auth.py  config_api.py  dashboard.py  pages.py  rules.py  sources.py  system.py
web/static/css/: app.css
web/static/js/: app.js  audit-components.js  lsm-components.js
web/templates/: audit.html  base.html  config.html  dashboard.html  livetest.html  login.html  logs.html  rules.html  source_form.html  sources.html  users.html
