[project]
name = "live-source-manager"
version = "2.0.0"
description = "Live Source Manager - enhanced layered filtering"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "types-requests",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "web", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501", "B008", "SIM108", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"app/manager.py" = ["T201"]
"app/logger.py" = ["T201"]
"app/__init__.py" = ["E402"]
"web/models.py" = ["E402"]
"tests/conftest.py" = ["E402", "I001", "SIM105", "F401", "UP009"]
"tests/*" = ["B017", "S101", "RUF059", "F841", "E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
# non-strict 大库下关闭"深入无注解函数体检查"，否则 no-untyped-call/no-any-return
# 链式爆炸；strict 核心模块不受此影响（strict 隐含 check_untyped_defs）
check_untyped_defs = false
# 非严格模块下，以下属"类型信息不完整"噪音（业务 dict 未注解/第三方缺 stub/
# 泛型参数缺失/函数缺返回注解），交由 ruff 与运行时保证；保留 attr-defined /
# arg-type / assignment / index / operator / return-any 等真正有语义价值的检查
disable_error_code = ["var-annotated", "import-untyped", "type-arg", "no-untyped-def", "no-untyped-call", "no-any-return", "union-attr", "type-var", "assignment", "arg-type", "operator", "misc"]
exclude = ["tests/", "venv/", ".venv/"]

[[tool.mypy.overrides]]
module = ["app", "app.*", "web", "web.*"]
strict = false

[[tool.mypy.overrides]]
module = ["app.exceptions", "app.utils", "app.logger"]
strict = true

[[tool.mypy.overrides]]
module = ["aiofiles", "aiohttp", "aiohttp_socks", "tqdm", "yaml", "psutil", "bcrypt"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: integration/e2e tests needing isolated DB",
]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.testclient",
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
